<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CompressActivity">


    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"


        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="10"
        android:gravity="center"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />
        </ScrollView>

    </LinearLayout>

    <TextView
        android:id="@+id/textViewCntImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:maxLines="1"
        tools:text="TextView" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"

        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSelectImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:background="@drawable/image_border"
            android:padding="10dp"
            android:text="@string/text9" />

        <ImageView
            android:id="@+id/watermarkImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"/>

        <ImageView
            android:id="@+id/btnSelectLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/image_border"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:src="@drawable/ico_location" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:maxLines="1"
                android:text="@string/text1"
                android:textColor="#111" />

            <Button
                android:id="@+id/btnSelectFolder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:background="@drawable/image_border"
                android:padding="10dp"
                android:text="@string/text2" />


        </LinearLayout>

        <EditText
            android:id="@+id/editTextSaveFolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:cursorVisible="false"
            android:ems="5"
            android:focusable="false"
            android:inputType="none"
            android:longClickable="false"
            android:maxLines="2" />

    </LinearLayout>

    <Button
        android:id="@+id/btnWatermark"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:background="@drawable/image_border"
        android:padding="10dp"
        android:text="@string/text10"
        android:textColor="#111"
        android:textSize="18sp" />

</LinearLayout>